<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_weight="4"
                tools:context="com.example.user.singapics.PostNewActivity"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="What do you want to do on National Day?"
        android:id="@+id/textView"
        android:layout_weight="0.01"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="19dp"
        android:textStyle="italic" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titleEditText"
        android:textSize="19dp"
        android:hint="@string/enterHere"
        android:maxLines="3"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_below="@+id/titleEditText"
        android:id="@+id/relativeLayout">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post"
        android:id="@+id/finalizeButton"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:background="@color/singapics_red"
        android:layout_toStartOf="@+id/loadingProgressBar"
        android:layout_alignRight="@+id/loadingProgressBar"
        android:layout_alignEnd="@+id/loadingProgressBar"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="true" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loadingProgressBar"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/backButton"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:background="@color/singapics_red"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp" />

</RelativeLayout>
