<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="#e74c3c"
                tools:context="com.example.matthew.homework4.signUpActivity"
                android:id="@+id/x"
                android:gravity="center_vertical">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="gone"
        android:id="@+id/loading"/>

    <EditText
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:id="@+id/UsernameBlank"
        android:hint="Username"
        android:layout_gravity="top"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:background="@drawable/loginedittexttopcurve"
        android:textColor="#fff"
        android:textColorHint="#ecf0f1"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView2"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/PasswordBlank"
        android:inputType="textPassword"
        android:hint="Password"
        android:layout_below="@+id/UsernameBlank"
        android:padding="15dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/loginedittextnocurve"
        android:singleLine="false"
        android:password="false"
        android:textColor="#fff"
        android:textColorHint="#ecf0f1"
        android:fontFamily="Roboto" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/PasswordBlank2"
        android:inputType="textPassword"
        android:hint="Confirm Password"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_below="@+id/PasswordBlank"
        android:padding="15dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/loginedittextnocurve"
        android:singleLine="false"
        android:password="false"
        android:textColor="#fff"
        android:textColorHint="#ecf0f1"
        android:fontFamily="Roboto" />

    <EditText
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:id="@+id/EmailBlank"
        android:hint="@string/email"
        android:layout_below="@+id/PasswordBlank2"
        android:layout_gravity="center_vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:background="@drawable/loginedittextbottomcurve"
        android:textColor="#fff"
        android:textColorHint="#ecf0f1"
        android:inputType="textEmailAddress"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:text="@string/join"
        android:id="@+id/tv4"
        android:textColor="#fff"
        android:fontFamily="Roboto"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/subtitle"
        android:id="@+id/textView2"
        android:textStyle="italic"
        android:textColor="#fff"
        android:layout_below="@+id/tv4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:id="@+id/CreateButton"
        android:padding="15dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/loginbutton"
        android:textColor="#e74c3c"
        android:fontFamily="Roboto"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_centerVertical="true"
        android:layout_below="@+id/EmailBlank"
        android:layout_alignRight="@+id/EmailBlank"
        android:layout_alignEnd="@+id/EmailBlank"/>


</RelativeLayout>
